Upgrade nokogiri gem (security issue)

--- a/02_madhyama/01_First/01_Sevens/MA_003.md
+++ b/02_madhyama/01_First/01_Sevens/MA_003.md
@@ -97,7 +97,7 @@ The Buddha spoke thus. The monks who heard what the Buddha had taught rejoiced a
 
 ### Endnotes
 
-1. Parallel include AN 7.67 and EA 39.4. [\[Back\]](#n1)
+1. Parallels include AN 7.67 and EA 39.4. [\[Back\]](#n1)
 2. *calabash beans, green grams, and lentils*. These are educated guesses based on glosses found in classical dictionaries and patterns of translation in other texts. Essentially, though, it appears to be a list of two or three common Indian legumes. [\[Back\]](#n2)
 
 ---
